@@ -84,6 +84,7 @@ IndigoCare Netrix protocol
 NetScaler HA Protocol
 NetScaler Metric Exchange Protocol
 NetScaler RPC Protocol
+DirectPlay 8 protocol
 --sort-and-group--
 
 === Updated Protocol Support
